--- a/linktree-helmi-santosa.html
+++ b/linktree-helmi-santosa.html
@@ -22,16 +22,16 @@
 
         <section class="kontak">
             <h2>Hubungi Saya Melalui:</h2>
-                <button class="btnt"><a href="https://t.me/HelmiSantosa" target="_blank" style="text-decoration: none; color: white"><i class="bi bi-telegram"></i>Telegram</a></button>
-                <button class="btnw"><a href="https://api.whatsapp.com/send/?phone=6282227273832&text&app_absent=0" target="_blank" style="text-decoration: none; color: white"><i class="bi bi-whatsapp"></i> WhatsApp</a></button>
+                <button class="btnt"><a href="https://t.me/HelmiSantosa" target="_blank" style="text-decoration: none; color: white; font-weight: bold"><i class="bi bi-telegram"></i>Telegram</a></button>
+                <button class="btnw"><a href="https://api.whatsapp.com/send/?phone=6282227273832&text&app_absent=0" target="_blank" style="text-decoration: none; color: white; font-weight: bold"><i class="bi bi-whatsapp"></i> WhatsApp</a></button>
         </section>
 
         <section class="produk">
             <h2>KREASI</h2>
-            <button class="btnk"><a href="https://campsite.bio/abumuda" target="_blank" style="text-decoration: none; color: white"><i class="fa-regular fa-shirt"></i> Kaos Oleh-Oleh</a></button>
-            <button class="btns"><a href="https://www.ciptaloka.com/+helmisantosa" target="_blank" style="text-decoration: none; color: white"><i class="bi bi-gift"></i> Suvenir
+            <button class="btnk"><a href="https://campsite.bio/abumuda" target="_blank" style="text-decoration: none; color: white; font-weight: bold"><i class="fa-regular fa-shirt"></i> Kaos Oleh-Oleh</a></button>
+            <button class="btns"><a href="https://www.ciptaloka.com/+helmisantosa" target="_blank" style="text-decoration: none; color: white; font-weight: bold"><i class="bi bi-gift"></i> Suvenir
                     Custom</a></button>
-            <button class="btnm"><a href="https://tees.co.id/stores/helmisantosa/" target="_blank" style="text-decoration: none; color: white"><i class="bi bi-cart"></i>
+            <button class="btnm"><a href="https://tees.co.id/stores/helmisantosa/" target="_blank" style="text-decoration: none; color: white; font-weight: bold"><i class="bi bi-cart"></i>
                     Merchandise Lengkap</a></button>
         </section>
 
